# VA_project

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  src.level.html  src.level_editor.html  src.main_menu.html
docs/_modules/: index.html
docs/_modules/src/: main.html
docs/_modules/src/level/: level.html  level_menu.html
docs/_modules/src/level_editor/: custom_level.html  custom_level_menu.html  level_editor.html
docs/_modules/src/main_menu/: menu.html
docs/_sources/: src.main_menu.rst.txt
docs_template/: conf.py  index.rst  src.level.rst  src.level_editor.rst  src.rst
scr/: level_editor.py  main.py
scr/game_physics_tester/: game_physics.py
scr/level_editor/: custom_level.py  custom_level_menu.py  level_editor.py
scr/level_editor/custom_levels/: level0_data.json  level1_data.json  level2_data.json  level3_data.json
scr/main_menu/: menu.py
src/: main.py
src/level/: level.py  level_menu.py
src/level/levels/: level0_data.json
src/level_editor/: custom_level.py  custom_level_menu.py  level_editor.py
src/level_editor/custom_levels/: level0_data.json  level1_data.json  level2_data.json  level3_data.json  level4_data.json  level6_data.json
src/main_menu/: menu.py
